Glass + SSS Irregularity in Cycles X #91997

Closed
opened 2021-10-07 06:19:41 +02:00 by Chris Jones · 8 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce 9600 GT/PCIe/SSE2 NVIDIA Corporation 3.3.0

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-05 22:29, hash: 26dac33ce1
Worked: Any version pre-Cycles X

Short description of error
Mixing Subsurface Scattering and Glass BSDF nodes produces unexpected results in Cycles X compared to regular Cycles. Attached is a .blend file containing a sphere with a Glass/SSS material applied, and a light positioned directly in front of it. This should render as a centred gradient, however in Cycles X its appearance is quite irregular. See the attached image for a render comparison, as well as a practical example of the effect on an eyeball using a ColorRamp to transition from Sclera (SSS) to Cornea (Glass).

Exact steps for others to reproduce the error
Load the attached .blend file and render in the viewport
SSS + Glass.blend
SSS & Glass Comparison.jpg

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce 9600 GT/PCIe/SSE2 NVIDIA Corporation 3.3.0 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-10-05 22:29, hash: `26dac33ce1` Worked: Any version pre-Cycles X **Short description of error** Mixing Subsurface Scattering and Glass BSDF nodes produces unexpected results in Cycles X compared to regular Cycles. Attached is a .blend file containing a sphere with a Glass/SSS material applied, and a light positioned directly in front of it. This should render as a centred gradient, however in Cycles X its appearance is quite irregular. See the attached image for a render comparison, as well as a practical example of the effect on an eyeball using a ColorRamp to transition from Sclera (SSS) to Cornea (Glass). **Exact steps for others to reproduce the error** Load the attached .blend file and render in the viewport [SSS + Glass.blend](https://archive.blender.org/developer/F10810208/SSS___Glass.blend) ![SSS & Glass Comparison.jpg](https://archive.blender.org/developer/F10832858/SSS___Glass_Comparison.jpg)
Author

Added subscriber: @ChrisJones

Added subscriber: @ChrisJones
Member

Added subscriber: @Alaska

Added subscriber: @Alaska
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

I can confirm.

System Information
Operating system: Linux-5.14.0-1-amd64-x86_64-with-glibc2.32 64 Bits
Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01

Blender Version: 3.0.0 Alpha, branch: master, commit date: 2021-10-07 01:04, hash: 70cc80ea1c

I can confirm. **System Information** Operating system: Linux-5.14.0-1-amd64-x86_64-with-glibc2.32 64 Bits Graphics card: NVIDIA GeForce RTX 3090/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 470.63.01 Blender Version: 3.0.0 Alpha, branch: master, commit date: 2021-10-07 01:04, hash: `70cc80ea1c`

This issue was referenced by blender/cycles@98b26fd853

This issue was referenced by blender/cycles@98b26fd85337ecaa65a1eb7cfa84013b44301899

This issue was referenced by 736be7cf58

This issue was referenced by 736be7cf5899047167e6b377414f35b2043191e9

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2021-10-08 16:11:24 +02:00

This issue was referenced by None@62717

This issue was referenced by None@62717
Sign in to join this conversation.
4 Participants
Notifications
Due Date
No due date set.
Dependencies

No dependencies set.

Reference: blender/blender#91997
No description provided.