Fix T91997: Cycles glass + SSS not rendering correctly